add fps, flatten normals

--- a/packages/example-boxworld/index.html
+++ b/packages/example-boxworld/index.html
@@ -7,5 +7,6 @@
   </head>
   <body style="margin: 0">
     <script type="module" src="/src/index.ts"></script>
+    <span style="position: absolute; top: 0px; right: 0px; background: white" id="fps">fps</span>
   </body>
 </html>
