--- a/packages/example-boxworld/index.html
+++ b/packages/example-boxworld/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boxworld demo</title>
+    <style>
+
+      body, html {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        overflow: hidden;
+      }
+
+      #canvas {
+        height: 100vh;
+        width: 100%;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+      #canvas canvas {
+        /* height: 100%;
+        width: 100%; */
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
-  <body style="margin: 0">
+  <body>
+    
+
+  <div id="canvas">
+      <div style="position: absolute; top: 0px; right: 0px; background: white; text-shadow: 1px solid white;" >
+        <span id="fps">fps</span>
+      </div>
+
+    </div>
     <script type="module" src="/src/index.ts"></script>
-    <span style="position: absolute; top: 0px; right: 0px; background: white" id="fps">fps</span>
   </body>
 </html>
