--- a/packages/example-boxworld/index.html
+++ b/packages/example-boxworld/index.html
@@ -33,6 +33,10 @@
     
 
   <div id="canvas">
+
+    <div style="position: absolute; top: 0px; left: 0px; background: white; text-shadow: 1px solid white;" >
+      <button id="start-vr">Start VR</button>
+    </div>
       <div style="position: absolute; top: 0px; right: 0px; background: white; text-shadow: 1px solid white;" >
         <span id="fps">fps</span>
       </div>
