smoother, faster, better, stronger ;)

--- a/packages/example-boxworld/index.html
+++ b/packages/example-boxworld/index.html
@@ -38,7 +38,9 @@
       <button id="start-vr">Start VR</button>
     </div>
       <div style="position: absolute; top: 0px; right: 0px; background: white; text-shadow: 1px solid white;" >
-        <span id="fps">fps</span>
+        <span id="fps">?</span> fps
+        /
+        <span id="frametime">?</span> ms
       </div>
 
     </div>
